# sabayon

./: .cvsignore  AUTHORS  ChangeLog  ISSUES  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  mozilla.py  pycheckrc  sabayon.doap  sabayon.schema  sabayon.spec.in
admin-tool/: .cvsignore  Makefile.am  aboutdialog.py  changeswindow.py  editorwindow.py  fileviewer.py  gconfviewer.py  groupsdialog.py  lockdownappliersabayon.py  lockdownwindow.py  monitorwindow.py  profilesdialog.in  profilesdialog.py  sabayon  sabayon-apply  sabayon-apply.in  sabayon-apply.py  sabayon-monitor  sabayon-monitor.in  sabayon-monitor.py  sabayon-session  sabayon-session.in  sabayon-session.py  sabayon-xinitrc.sh.in  sabayon.console  sabayon.console.in  sabayon.desktop.in  sabayon.glade  sabayon.in  sabayon.pam  sabayon.py  sabayon.ui  saveconfirm.py  sessionwidget.py  sessionwindow.py  usersdialog.py  userswindow.py
admin-tool/lockdown/: .cvsignore  DONT_EDIT_FILES_HERE  Makefile.am  __init__.py  config.py  disabledapplets.py  globalvar.py  icons.py  lockdownapplier.py  lockdownappliergconf.py  lockdownbutton.py  lockdowncheckbutton.py  lockdowncombo.py  maindialog.py  pessulus.glade  pessulus.ui  safeprotocols.py  simpleeditabletreeview.py
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
doc/: Makefile.am  developing.html  flat.html  helping.html  index.html  site.xsl  testing.html
help/: Makefile.am  sabayon.omf.in
help/C/: sabayon.xml
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/pt_BR/: pt_BR.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
lib/: Makefile.am  README.storage  __init__.py  cache.py  config.py.in  debuglog.py  dirmonitor.py  errors.py  groupdb.py  mozilla_bookmarks.py  protosession.py  storage.py  systemdb.py  test-debug-log.conf  test-debug-log.py  unittests.py  userdb.py  usermod.py  userprofile.py  util.py  xlib.c
lib/sources/: .cvsignore  Makefile.am  filessource.py  gconfsource.py  mozillasource.py  paneldelegate.py  testsource.py
lib/storage-modules/: Makefile.am  gconfsource.py  mozillasource.py
man/: Makefile.am  sabayon-apply.8  sabayon.8
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hu.po  hy.po  id.po  it.po  ja.po  (+47 more)
