include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = sabayon
DOC_ENTITIES = legal.xml
DOC_FIGURES = \
	figures/add-profile.png \
	figures/apply-by-group.png \
	figures/apply-by-user.png\
	figures/changes.png \
	figures/edit-desktop.png \
	figures/lockdown.png \
	figures/main-window-edit.png \
	figures/main-window.png \
	figures/menu.png

DOC_LINGUAS = ar as be be@latin bg bn bn_IN br ca ca@valencia cs cy da de dz el en_CA en_GB en@shaw es et eu fa fi fr gl gu he hi hu id it ja ka kn ko ku lt lv mai mg mk ml mn mr nb nds ne nl nn oc or pa pl ps pt pt_BR ro ru rw si sl sq sr sr@latin sv ta te th tr uk vi zh_CN zh_HK zh_TW
