include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = sabayon
DOC_ENTITIES = legal.xml
DOC_FIGURES = \
	figures/add-profile.png \
	figures/apply-by-group.png \
	figures/apply-by-user.png\
	figures/changes.png \
	figures/edit-desktop.png \
	figures/lockdown.png \
	figures/main-window-edit.png \
	figures/main-window.png \
	figures/menu.png

DOC_LINGUAS = de el es fr sv uk zh_CN
